# rust-api

./: .env.example  Cargo.toml
src/: lib.rs  main.rs
src/config/: mod.rs  router.rs
src/database/: mod.rs
src/entities/: user.rs
src/handlers/: create_user.rs  delete_user.rs  mod.rs  read_user.rs  root.rs  update_user.rs
