[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.6" }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.68" }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql"] }
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
